# swin_v2_weather

./: Makefile  conda.yaml  pyproject.toml  test_data_loader.py  test_model_dims.py  train.py
config/: swin.yaml  swin_73var_geo_depth12_chweight_invar_e1536_00.yaml
networks/: helpers.py  swinv2_global.py
utils/: YParams.py  conditioning_inputs.py  dali_era5_es_helper.py  data_loader_era5.py  data_loader_era5_dali.py  grids.py  img_utils.py  losses.py  preprocess_utils.py  weighted_acc_rmse.py  zenith_angle.py
