[tool.poetry]
name = "swin_v2_weather"
version = "0.0.0"
description = "SwinV2_Weather model, developed for the 'Analyzing and Exploring Training Recipes for Large-Scale Transformer-Based Weather Prediction' paper."
authors = ["Willard et al., UC Berkeley"]
packages = [
    { include = "networks" },
    { include = "utils" },
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ruamel-yaml = "^0.18.6"
timm = "^1.0.12"
netcdf4 = "^1.7.2"
h5py = "^3.12.1"
pytz = "^2024.2"
matplotlib = ">=3.9,<4.0"
torchinfo = ">=1.8,<2.0"
nvidia-dali-cuda120 = "^1.44.0"
cupy-cuda12x = "^13.3.0"


[tool.poetry.dev-dependencies]
black = "^24.8"
coverage = {extras = ["toml"], version = "^7.6"}
flake8-black = "0.3"
flake8-bugbear = "^24.8"
isort = "^5.13"
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-sugar = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "typings"
